--- a/onlineShooping/pom.xml
+++ b/onlineShooping/pom.xml
@@ -12,6 +12,13 @@
 		<javaee.version>7.0</javaee.version>
 	</properties>
 	<dependencies>
+
+		<!-- link backend project -->
+		<dependency>
+			<groupId>net.hoss</groupId>
+			<artifactId>shopingbackend</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -32,7 +39,7 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>5.2.5.RELEASE</version>
 		</dependency>
-<!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
 		<dependency>
 			<groupId>jstl</groupId>
 			<artifactId>jstl</artifactId>
